# summarizer

./: .gitignore  AGENTS.md  Cargo.toml  README.md  a.txt  b.txt  c.txt  injection_test.txt  test_config.toml
.github/workflows/: release.yml  rust.yml
doc/: 01_introduction.adoc  02_installation.adoc  03_quickstart.adoc  04_usage.adoc  05_configuration.adoc  06_providers.adoc  07_how_it_works.adoc  08_development.adoc  development_manual.adoc  summarizer.adoc  user_manual.adoc
doc/dev/: architecture.adoc  development.adoc  error_handling.adoc
doc/user/: configuration.adoc  installation.adoc  introduction.adoc  providers.adoc  quickstart.adoc  usage.adoc
src/: cli.rs  config.rs  engine.rs  file.rs  main.rs  setup.rs
src/provider/: gemini.rs  mod.rs  ollama.rs  openai_compatible.rs  openrouter.rs
